--- a/HomePage.html
+++ b/HomePage.html
@@ -46,6 +46,66 @@
         <script src="https://www.diaoyanbang.com/PUBLIC/Home/js/jquery.js"></script>
         <link rel="stylesheet" type="text/css" href="p_css/homepagecss.css">
         <script language="javascript" type="text/javascript" src="p_js/homepagejs.js"></script>
+        <script>
+            function banner(){
+                var bn_id = 0;
+                var bn_id2= 1;
+                var speed33=4000;
+                var qhjg = 1;
+                var MyMar33;
+                $("#banner .d1").hide();
+                $("#banner .d1").eq(0).fadeIn("slow");
+                if($("#banner .d1").length>1)
+                {
+                    $("#banner_id li").eq(0).addClass("nuw");
+                    function Marquee33(){
+                        bn_id2 = bn_id+1;
+                        if(bn_id2>$("#banner .d1").length-1)
+                        {
+                            bn_id2 = 0;
+                        }
+                        $("#banner .d1").eq(bn_id).css("z-index","2");
+                        $("#banner .d1").eq(bn_id2).css("z-index","1");
+                        $("#banner .d1").eq(bn_id2).show();
+                        $("#banner .d1").eq(bn_id).fadeOut("slow");
+                        $("#banner_id li").removeClass("nuw");
+                        $("#banner_id li").eq(bn_id2).addClass("nuw");
+                        bn_id=bn_id2;
+                    };
+
+                    MyMar33=setInterval(Marquee33,speed33);
+
+                    $("#banner_id li").click(function(){
+                        var bn_id3 = $("#banner_id li").index(this);
+                        if(bn_id3!=bn_id&&qhjg==1)
+                        {
+                            qhjg = 0;
+                            $("#banner .d1").eq(bn_id).css("z-index","2");
+                            $("#banner .d1").eq(bn_id3).css("z-index","1");
+                            $("#banner .d1").eq(bn_id3).show();
+                            $("#banner .d1").eq(bn_id).fadeOut("slow",function(){qhjg = 1;});
+                            $("#banner_id li").removeClass("nuw");
+                            $("#banner_id li").eq(bn_id3).addClass("nuw");
+                            bn_id=bn_id3;
+                        }
+                    })
+                    $("#banner_id").hover(
+                        function(){
+                            clearInterval(MyMar33);
+                        }
+                        ,
+                        function(){
+                            MyMar33=setInterval(Marquee33,speed33);
+                        }
+                    )
+                }
+                else
+                {
+                    $("#banner_id").hide();
+                }
+            }
+
+        </script>
     </head>
     <body>
         <div class="p_head_bg">
@@ -54,8 +114,7 @@
                     <a class="head_logo" href="#" target="_self"><img src="images/logo.jpg" class="head_logoimg"></a>
                 </div>
                 <div class="p_head_title">
-                    <div id="menu-line" style="width: 78px;left: 0px;">
-                    
+                    <div id="menu-line" style="width: 100px;left: 0px;">
                     </div>
                     <ul class="head_title_ul">
                         <li><a class="head_title" href="#" target="_self">首页</a></li>
@@ -111,9 +170,21 @@
             </div>
         </div>
         <div id="box-banner">
-            <div class="p_head_banner">
-                <a href="#"><img src="images/banner/banner1.jpg"></a>
+            <div class="banner" id="banner">
+                <a href="#" class="d1" style="background: rgba(0, 0, 0, 0) url('images/banner/banner1.jpg') no-repeat scroll center center; display: none; z-index: 2;"></a>
+                <a href="#" class="d1" style="background: rgba(0, 0, 0, 0) url('images/banner/banner2.jpg') no-repeat scroll center center; display: none; z-index: 1;"></a>
+                <a href="#" class="d1" style="background: rgba(0, 0, 0, 0) url('images/banner/banner3.jpg') no-repeat scroll center center; display: none; z-index: 1;"></a>
+                <a href="#" class="d1" style="background: rgba(0, 0, 0, 0) url('images/banner/banner4.jpg') no-repeat scroll center center; display: none; z-index: 1;"></a>
             </div>
+            <div id="banner_id" class="d2">
+                <ul>
+                    <li class=""></li>
+                    <li class=""></li>
+                    <li class=""></li>
+                    <li class=""></li>
+                </ul>
+            </div>
+            <script type="text/javascript">banner()</script>
         </div>
         <div id="box-content">
             <div class="content_bg_left">
